--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat CBD</title>
+    <!-- Import font Roboto Mono -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Link to the updated style.css -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="chat-container">
         <div id="chatbox">
             <div id="messages">
-                <div class="chat-title">Chat CBD</div>
+                <!-- Không cần thêm chữ "Chat CBD" ở đây vì nó đã được thêm vào watermark qua style.css -->
             </div>
         </div>
         <div id="input-area">
