--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
     <!-- Link to the updated style.css -->
     <link rel="stylesheet" href="style.css">
+    <!-- Import Marked.js -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
     <div id="chat-container">
@@ -21,6 +23,7 @@
             <button id="send-button">Gửi</button>
         </div>
     </div>
+    <!-- Link to your script.js -->
     <script src="script.js"></script>
 </body>
 </html>
